# Epiphany

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/epiphany-api/: Cargo.toml
crates/epiphany-api/src/: auth.rs  authz.rs  calc_factory.rs  connection_routes.rs  dimension_routes.rs  dto.rs  error.rs  flow_reader.rs  flow_routes.rs  http_connector.rs  job_routes.rs  lib.rs  login_guard.rs  model_routes.rs  openapi.rs  overview_routes.rs  query_routes.rs  resolve.rs  routes.rs  rule_routes.rs  sandbox_routes.rs  scheduler.rs  secret_routes.rs  security_routes.rs  session.rs  view_cache.rs  ws.rs
crates/epiphany-api/tests/: audit.rs  auth_hardening.rs  cells.rs  connectors.rs  cube_default_access.rs  cube_grants.rs  dimension_editing.rs  element_security.rs  http_connector.rs  http_hardening.rs  m2_acceptance.rs  m3_acceptance.rs  m4_acceptance.rs  m5_acceptance.rs  m6_acceptance.rs  m7_acceptance.rs  m8_acceptance.rs  mdx_query.rs  model_editing.rs  object_security.rs  query.rs  rbac.rs  sandboxes.rs  security_admin.rs  shared_dimensions.rs  spread.rs  sql_connector.rs  view_cache.rs
crates/epiphany-calc/: Cargo.toml
crates/epiphany-calc/src/: compile.rs  compiled.rs  eval.rs  feeders.rs  lib.rs  provenance.rs  registry.rs  testing.rs
crates/epiphany-calc/src/rules/: ast.rs  error.rs  lexer.rs  mod.rs  parser.rs
crates/epiphany-connect/: Cargo.toml
crates/epiphany-connect/src/: http.rs  lib.rs  sql.rs
crates/epiphany-core/: Cargo.toml
crates/epiphany-core/benches/: cube_ops.rs  view_exec.rs
crates/epiphany-core/src/: cube.rs  dimension.rs  element_mask.rs  error.rs  lib.rs  query.rs  spread.rs  text.rs  value.rs
crates/epiphany-core/tests/: memory.rs
crates/epiphany-determinism/: Cargo.toml
crates/epiphany-determinism/src/: lib.rs
crates/epiphany-engine/: Cargo.toml
crates/epiphany-engine/src/: dimensions.rs  lib.rs
crates/epiphany-flow/: Cargo.toml
crates/epiphany-flow/benches/: scheduler.rs
crates/epiphany-flow/src/: csv.rs  ledger.rs  lib.rs  run.rs  scheduler.rs  strip.rs  testing.rs
crates/epiphany-mdx/: Cargo.toml
crates/epiphany-mdx/src/: ast.rs  error.rs  eval.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs
crates/epiphany-persist/: Cargo.toml
crates/epiphany-persist/src/: automation.rs  lib.rs  registry.rs  slug.rs  store.rs  wal.rs
crates/epiphany-persist/tests/: m1_acceptance.rs
crates/epiphany-security/: Cargo.toml
crates/epiphany-security/src/: acl.rs  audit.rs  lib.rs  password.rs  secret.rs  store.rs
crates/epiphany-server/: Cargo.toml
crates/epiphany-server/src/: boot.rs  config.rs  demo.rs  main.rs  observability.rs  service_windows.rs  shutdown.rs  tls.rs  ui.rs
deploy/: Dockerfile  com.epiphany.server.plist  epiphany.service
docs/: DEPLOYMENT.md  PERFORMANCE.md  QUICK_START.md  ROADMAP.md  agentic_ai_programming_best_practices.md
docs/adr/: 0001-concurrency-model.md  0002-runtime-persistence-format.md  0003-model-as-code-serialization.md  0004-embedded-javascript-engine.md  0005-automatic-feeder-inference.md  0006-cell-storage-and-memory-layout.md  0007-rule-evaluation-strategy.md  0008-numeric-model-and-precision.md  0009-determinism-strategy.md  0010-audit-logging.md  0011-mdx-seam-and-execution.md  0012-data-source-connectors.md  0013-flow-scheduling-and-orchestration.md  0014-sandbox-overlay-representation.md  0015-object-and-element-security.md  0016-global-cube-grants-and-explicit-deny.md  0017-authentication-and-credential-hardening.md  0018-http-surface-hardening.md  0019-optional-tls.md  0020-web-ui-design-system-and-information-architecture.md  0021-model-editing-api.md  0022-excel-add-in.md  0023-modular-object-kind-permissions.md  0024-shared-independent-dimensions.md  0025-at-rest-encryption-posture.md  0026-web-syntax-highlighting.md  0027-connection-preview-endpoint.md  0028-view-cache-and-parallel-aggregation.md  0029-data-spreading.md  0030-http-connector-and-secret-store.md  0031-global-dimension-namespace.md  0032-scalable-member-table.md  0033-element-security-for-global-dimension-reads.md  0034-native-sql-source.md  0035-global-multi-cube-automation.md  0036-dimension-structural-editing.md  0037-lowercase-on-disk-layout.md  0038-explicit-top-level-membership.md  0039-deduplicate-consolidation-rollups.md  README.md  (+1 more)
excel-addin/: Epiphany.ExcelAddIn.csproj  README.md
excel-addin/src/: AddIn.cs  CommitService.cs  ConfiguratorForm.cs  EpiphanyClient.cs  Functions.cs  RibbonController.cs  TokenStore.cs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  host.ts  main.tsx  styles.css  templates.ts
web/src/api/: client.ts
web/src/components/: AuditViewer.tsx  CellsetGrid.tsx  ChangePassword.tsx  CubeApp.tsx  DimensionEditor.tsx  DimensionsWorkspace.tsx  ElementTree.tsx  ErrorBoundary.tsx  FlowsWorkspace.tsx  JobsWorkspace.tsx  Login.tsx  MemberSetPicker.tsx  MemberTable.tsx  ModelExplorer.tsx  ModelWorkspace.tsx  PivotFields.tsx  PivotGrid.tsx  RulesWorkspace.tsx  SandboxBar.tsx  SecurityWorkspace.tsx  ServerOverview.tsx  SetsManager.tsx  SubsetEditor.tsx  TestReport.tsx  TraceView.tsx  ViewBuilder.tsx  ViewWorkspace.tsx  WelcomeCard.tsx  modelExplorerTree.test.ts  modelExplorerTree.ts
web/src/model/: tree.test.ts  tree.ts
web/src/styles/: components.css  tokens.css
web/src/ui/: Badge.tsx  Button.tsx  Card.tsx  CodeEditor.tsx  CommandPalette.tsx  Dialog.tsx  EmptyState.tsx  Field.tsx  Menu.tsx  Select.tsx  Switch.tsx  Tabs.tsx  ThemeToggle.tsx  Tooltip.tsx  confirm.tsx  cx.ts  highlight.ts  index.ts  theme.ts  useCommandPalette.ts  useVirtualRows.ts
