[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.96"
publish = false
license = "MIT"

# Determinism + safety defaults for the whole workspace.
[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Modest release tuning; the performance mandate (ROADMAP section 1/section 8) is pursued
# with benchmarks, not premature flags. Revisit in Phase 8.
[profile.release]
lto = "thin"
codegen-units = 1
