[package]
name = "epiphany-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
description = "Epiphany: REST + WebSocket API surface (Axum, Phase 2)."

[lints]
workspace = true

[dependencies]
epiphany-core = { path = "../epiphany-core" }
epiphany-engine = { path = "../epiphany-engine" }
# The rule endpoints (preview/explain/diagnostics/test-run) and the rule-aware
# read resolver are genuine calc features, so the API depends on epiphany-calc
# directly. The edge stays acyclic (calc -> core only). Value reads still go
# through the engine's CellResolverFactory seam, so a no-rules deployment can
# inject StoredCellsFactory.
epiphany-calc = { path = "../epiphany-calc" }
epiphany-persist = { path = "../epiphany-persist" }
epiphany-security = { path = "../epiphany-security" }
epiphany-determinism = { path = "../epiphany-determinism" }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
tokio = { version = "1", features = ["sync", "macros", "rt"] }

[dev-dependencies]
# The MDX evaluator is injected at the composition root (the server) in
# production; tests construct it directly to exercise dynamic subsets, so it is a
# dev-dependency here. Production API code depends only on the core SetEvaluator
# trait, keeping the dependency edge one-way (mdx -> core).
epiphany-mdx = { path = "../epiphany-mdx" }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
