[package]
name = "epiphany-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
description = "Epiphany: REST + WebSocket API surface (Axum, Phase 2)."

[lints]
workspace = true

[features]
# Build the HTTP fetch connector (ADR-0030). Off by default to keep the lean
# build dependency-light; the server's `http` feature and release binaries
# enable it. Forwards to epiphany-connect's http feature (ureq, rustls/ring).
http = ["epiphany-connect/http"]
# Build the native SQL fetch connector (ADR-0034). Off by default; the server's
# `postgres` feature and release binaries enable it. Forwards to
# epiphany-connect's postgres feature (tokio-postgres, rustls/ring).
postgres = ["epiphany-connect/postgres"]
# Build the native MySQL / MariaDB connector (ADR-0034). Off by default.
mysql = ["epiphany-connect/mysql"]

[dependencies]
epiphany-core = { path = "../epiphany-core" }
epiphany-engine = { path = "../epiphany-engine" }
# The rule endpoints (preview/explain/diagnostics/test-run) and the rule-aware
# read resolver are genuine calc features, so the API depends on epiphany-calc
# directly. The edge stays acyclic (calc -> core only). Value reads still go
# through the engine's CellResolverFactory seam, so a no-rules deployment can
# inject StoredCellsFactory.
epiphany-calc = { path = "../epiphany-calc" }
# The flow endpoints run TypeScript ETL flows; the edge stays acyclic
# (flow -> core only) and the API applies a flow's planned changes via the engine.
epiphany-flow = { path = "../epiphany-flow" }
# Data-source connectors (a flow can ingest from a configured connection).
epiphany-connect = { path = "../epiphany-connect" }
epiphany-persist = { path = "../epiphany-persist" }
epiphany-security = { path = "../epiphany-security" }
epiphany-determinism = { path = "../epiphany-determinism" }
# The MDX cellset endpoint parses a full SELECT query and lowers it to a core
# View. The dependency edge stays one-way (mdx -> core); the API only consumes
# the parser/evaluator, never the reverse.
epiphany-mdx = { path = "../epiphany-mdx" }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
tokio = { version = "1", features = ["sync", "macros", "rt"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
