[package]
name = "epiphany-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Epiphany — in-memory multidimensional model (dims, cubes, sparse cell store, sandboxes, model-as-code)."

[lints]
workspace = true

[dependencies]
epiphany-determinism = { path = "../epiphany-determinism" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
