[package]
name = "epiphany-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
description = "Epiphany: in-memory multidimensional model (dims, cubes, sparse cell store, sandboxes, model-as-code)."

[lints]
workspace = true

[dependencies]
epiphany-determinism = { path = "../epiphany-determinism" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

# Self-contained benchmark binaries (no external bench framework, so they build
# on the GNU toolchain and keep the dependency surface minimal, RG-10). Run with
# `cargo bench -p epiphany-core`.
[[bench]]
name = "cube_ops"
harness = false

# View execution: cold consolidated view latency and the serial-vs-parallel
# aggregation comparison that gates ADR-0028 Stage B.
[[bench]]
name = "view_exec"
harness = false
