[package]
name = "epiphany-flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Epiphany — Flows: TypeScript ETL/automation engine, data sources, scheduler."

[lints]
workspace = true

[dependencies]
epiphany-core = { path = "../epiphany-core" }
epiphany-determinism = { path = "../epiphany-determinism" }
