[package]
name = "epiphany-flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
description = "Epiphany, Flows: TypeScript ETL/automation engine, data sources, scheduler."

[lints]
workspace = true

[dependencies]
epiphany-core = { path = "../epiphany-core" }
epiphany-determinism = { path = "../epiphany-determinism" }
# The embedded JavaScript engine flows run on (ADR-0004): pure Rust, so it
# builds on the GNU toolchain with no C step and links into the single binary.
boa_engine = "0.21"
# Used only as a transport across the Rust/JS boundary (host functions exchange
# JSON strings the JS side builds with the engine's own JSON).
serde_json = "1"
