[package]
name = "epiphany-mdx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
description = "Epiphany: MDX parser/evaluator for dynamic subsets and cellsets."

[lints]
workspace = true

[dependencies]
epiphany-core = { path = "../epiphany-core" }
