[package]
name = "epiphany-persist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Epiphany: runtime durability (transaction log + snapshots + recovery)."

[lints]
workspace = true

[dependencies]
epiphany-core = { path = "../epiphany-core" }
epiphany-determinism = { path = "../epiphany-determinism" }
