[package]
name = "epiphany-persist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
description = "Epiphany: runtime durability (transaction log + snapshots + recovery)."

[lints]
workspace = true

[dependencies]
epiphany-core = { path = "../epiphany-core" }
epiphany-determinism = { path = "../epiphany-determinism" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
