[package]
name = "epiphany-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
description = "Epiphany: users/groups, password hashing, and (Phase 7) object & element authorization."

[lints]
workspace = true

[dependencies]
argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
toml = "1"
