[package]
name = "epiphany-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
description = "Epiphany: the server daemon (composition root)."

[lints]
workspace = true

[features]
# Embed the built web UI (web/dist) for single-binary serving. Off by default
# and in CI (the Rust job builds without web/dist); enable for release packaging
# after `npm run build`.
embed-ui = ["dep:rust-embed"]

[dependencies]
epiphany-api = { path = "../epiphany-api" }
epiphany-core = { path = "../epiphany-core" }
epiphany-engine = { path = "../epiphany-engine" }
epiphany-mdx = { path = "../epiphany-mdx" }
epiphany-persist = { path = "../epiphany-persist" }
epiphany-security = { path = "../epiphany-security" }
epiphany-determinism = { path = "../epiphany-determinism" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros", "sync"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rust-embed = { version = "8", optional = true }
